# Si-Vision-Embedded-SW-Internship

./: README.md
C++_Course/Session 2/: Session 2 Notes.md
C++_Course/Session 3/: MyClass.cpp  MyClass.h  Session 3 Notes.md  main.cpp
C++_Course/Session 4/: Session 4 Notes.md
C++_Course/Session 5/: Session 5 Notes.md
C++_Course/Session 6/: Session 6 Notes.md  main.cpp
Events Manager Project/: Project Draft.md
Events Manager Project/Events_Manager_Implementation/: .cproject  .project  CMakeLists.txt  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  EventGenerator.cpp  EventGenerator.h  EventGenerator_Test.txt  EventManager.cpp  EventManager.h  HWReceivePacket.cpp  HWReceivePacket.h  HWSendPacket.cpp  HWSendPacket.h  HardwareEvent.cpp  HardwareEvent.h  README.md  SystemEvent.cpp  SystemEvent.h  SystemShutdown.cpp  SystemShutdown.h  SystemSleep.cpp  SystemSleep.h  SystemWakeup.cpp  SystemWakeup.h  main.cpp  makefile
Events Manager Project/Events_Manager_Implementation/inc/: HWReceivePacket.h  HardwareEvent.h  SystemEvent.h  SystemSleep.h  SystemWakeup.h
Events Manager Project/Events_Manager_Implementation/src/: Event.cpp  EventManager.cpp  HardwareEvent.cpp  SystemEvent.cpp
GNU Binary Utilities/: GNU Binary Utilities.md
Makefile Tutorials/: Makefile Notes.md
Meetings Notes/: Runtime Libraries Meeting.md
Picolibc/: Commands_Used.md  How to link Picolibc as a static lib.md  Nano-Malloc-Bug.md  Picolibc_Notes.md  QEMU.md  a-hello_world.i  a-hello_world.s  a.out  arm.ld  hello-world-riscv.elf  hello-world.ld  hello_world.c  picolibc.specs
(+121 files in other folders)
